--- a/resources/sass/templates/contact/index.scss
+++ b/resources/sass/templates/contact/index.scss
@@ -6,7 +6,7 @@
 }
 
 .grey-bg {
-    background-color: $grey200;
+    background-color: $grey300;
 }
 
 section:last-of-type {
